# fictional-octo-system

_build/: .db  .digest-db  log
_build/default/: Simplifier.dune-package  Simplifier.opam  dune-project
_build/default/.dune/: configurator  configurator.v2
_build/default/data/: rules.ddx
_build/default/lib/: ast.ml  lexer.ml  lexer.mll  modules.ml  parser.ml  parser.mli  parser.mly  parser__mock.ml.mock  parser__mock.mli.inferred  simplifier__.ml-gen
_build/default/lib/.Simplifier.objs/: simplifier.impl.all-deps  simplifier.impl.d  simplifier__Lexer.impl.all-deps  simplifier__Modules.impl.d  simplifier__Parser.intf.all-deps
_build/default/lib/.Simplifier.objs/byte/: simplifier__.cmi  simplifier__.cmo  simplifier__.cmt  simplifier__Ast.cmi  simplifier__Ast.cmo  simplifier__Ast.cmt  simplifier__Lexer.cmi  simplifier__Lexer.cmo  simplifier__Lexer.cmt  simplifier__Parser.cmi  simplifier__Parser.cmo  simplifier__Parser.cmt  simplifier__Parser.cmti
_build/default/lib/.Simplifier.objs/native/: simplifier__.cmx  simplifier__Ast.cmx  simplifier__Lexer.cmx  simplifier__Parser.cmx
_build/default/lib/.merlin-conf/: lib-Simplifier
_build/default/test/: Simplifier.bc
_build/default/test/.Simplifier.eobjs/byte/: dune__exe__Simplifier.cmi  dune__exe__Simplifier.cmo  dune__exe__Simplifier.cmt
_build/default/test/.Simplifier.eobjs/native/: dune__exe__Simplifier.cmx
_build/default/test/.merlin-conf/: exe-Simplifier
_build/install/default/lib/Simplifier/: META  dune-package  opam
lib/: dune  modules.ml  simplifier.ml
test/: dune
